package seedu.address.model.drink.exceptions;

/**
 * Signals that the operation is unable to find the specified drink.
 */
public class DrinkNotFoundException extends RuntimeException {}
